--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,18 @@
+@import url("https://fonts.cdnfonts.com/css/poppins");
 @import "tailwindcss";
+
+* {
+  font-family: "Poppins", sans-serif;
+  /* outline: 1px solid red; */
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1220px) {
+  .align {
+    gap: 2.5rem;
+    font-size: 1rem;
+  }
+  .scale {
+    gap: 1.3rem;
+    font-size: 0.9rem;
+  }
+}
