--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 * {
   font-family: "Poppins", sans-serif;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 
 @media screen and (min-width: 1023px) and (max-width: 1220px) {
