--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,11 @@
     margin-top: -15%;
   }
 }
+
+@media screen and (max-width: 415px) {
+  .button {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 90%;
+  }
+}
